[package]
name = "storing"
version = "0.1.0"
authors = ["Tatsuya Kanemoto <cashewnuts903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
